fix: Section font color contrast, comment out social media icons

--- a/app/styles/agency.less
+++ b/app/styles/agency.less
@@ -231,7 +231,6 @@ section {
 		margin-bottom: 15px;
     }
     h3.section-subheading {
-        color: @gray-lighter;
 		font-size: 16px;
 		.serif-font;
 		text-transform: none;
@@ -239,14 +238,23 @@ section {
 		font-weight: 400;
 		margin-bottom: 35px;
     }
-  h4.section-subheading {
-    color: @gray-lighter;
-    font-size: 14px;
-    .serif-font;
-    text-transform: none;
-    font-style: italic;
-    margin-bottom: 15px;
-  }
+    h3.contact-section-subheading{
+      color: @gray-lighter;
+      font-size: 16px;
+      .serif-font;
+      text-transform: none;
+      font-style: italic;
+      font-weight: 400;
+      margin-bottom: 35px;
+    }
+    h4.section-subheading {
+      color: @gray-lighter;
+      font-size: 14px;
+      .serif-font;
+      text-transform: none;
+      font-style: italic;
+      margin-bottom: 15px;
+    }
 }
 
 @media(min-width:768px) {
